log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Tue 28 Mar 2023 11:45:52 PM UTC: 
 tests:  0|6
total_score: 0/70
c24e93c
Tue 28 Mar 2023 11:46:45 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:3: error: conversion to non-scalar type requested
   14 |   ArrayList Lista = (ArrayList) malloc(sizeof(ArrayList));
      |   ^~~~~~~~~
arraylist.c:14:13: error: unused variable ‘Lista’ [-Werror=unused-variable]
   14 |   ArrayList Lista = (ArrayList) malloc(sizeof(ArrayList));
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
01c3ed3
Tue 28 Mar 2023 11:47:17 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘Lista’ [-Werror=unused-variable]
   14 |   ArrayList *Lista = (ArrayList *) malloc(sizeof(ArrayList));
      |              ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e24eac1
Tue 28 Mar 2023 11:47:27 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
4ace9f1
Tue 28 Mar 2023 11:57:26 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:12: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   15 |     return Lista;
      |            ^~~~~
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
70339ee
Tue 28 Mar 2023 11:57:41 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:15:12: error: ‘Lista’ is used uninitialized [-Werror=uninitialized]
   15 |     return Lista;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
d4a9a6b
Tue 28 Mar 2023 11:57:49 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:12: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   15 |     return Lista;
      |            ^~~~~
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
526a985
Wed 29 Mar 2023 12:12:50 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:12: error: function returns address of local variable [-Werror=return-local-addr]
   15 |     return &Lista;
      |            ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
203e887
Wed 29 Mar 2023 12:12:57 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:12: error: invalid type argument of unary ‘*’ (have ‘ArrayList’ {aka ‘struct ArrayList’})
   15 |     return *Lista;
      |            ^~~~~~
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a0254c2
Wed 29 Mar 2023 12:13:12 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:13: error: expected identifier or ‘(’ before ‘&’ token
   14 |   ArrayList &Lista;
      |             ^
arraylist.c:15:13: error: ‘Lista’ undeclared (first use in this function)
   15 |     return *Lista;
      |             ^~~~~
arraylist.c:15:13: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:16:1: error: control reaches end of non-void function [-Werror=return-type]
   16 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d70bfa1
Wed 29 Mar 2023 12:13:23 AM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:15:12: error: ‘Lista’ is used uninitialized [-Werror=uninitialized]
   15 |     return Lista;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
51eb73b
Wed 29 Mar 2023 12:14:19 AM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:15:19: error: ‘Lista’ is used uninitialized [-Werror=uninitialized]
   15 |   Lista->capacity = 5;
      |   ~~~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
4044395
Wed 29 Mar 2023 12:16:35 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:15:15: error: ‘Lista’ is used uninitialized [-Werror=uninitialized]
   15 |   Lista->data = (void *) malloc(sizeof(void));
      |   ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f783bc5
Wed 29 Mar 2023 12:17:12 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
5e4bb3c
Wed 29 Mar 2023 12:21:10 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘createList’:
arraylist.c:16:15: error: ‘Lista’ is used uninitialized [-Werror=uninitialized]
   16 |   Lista->data = (void *) malloc(sizeof(void));
      |   ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a5958e3
Wed 29 Mar 2023 12:21:19 AM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
33c7653
Wed 29 Mar 2023 12:21:27 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ed198a7
Wed 29 Mar 2023 12:21:34 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7118dcc
